syntax = "proto3";

package v1;

import "service.proto";

message DiscoverRequest {
  enum DiscoverRequestType {
    UNKNOWN = 0;
    INSTANCE = 1;
    CLUSTER = 2;
    ROUTING = 3;
    RATE_LIMIT = 4;
    CIRCUIT_BREAKER = 5;
    SERVICES = 6;
    reserved 7 to 11;
    NAMESPACES = 12;
  }

  DiscoverRequestType type = 1;
  Service service = 2;
  reserved 3 to 4;
}

